<resources>
    <string name="app_name">Booking App</string>
    <string name="genuva_app">Genuva App</string>
    <string name="e_mail">E-mail Address</string>
    <string name="Enter_Name">Name</string>
    <string name="Enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_Number">Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="Create_An_Account">Create Your Account</string>
    <string name="MyTickets">My tickets</string>
    <string name="logout">Logout</string>
    <string name="controlPanel">Control Panel</string>
    <string name="SakiaElSawy">Sakia El Sawy</string>
    <string name="OperaHouse">Opera house</string>
    <string name="login">LOGIN</string>
    <string name="or">_____ or _____</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="facebook_app_id">1167210933480644</string>
    <string name="fb_login_protocol_scheme">fb1167210933480644</string>
</resources>
