<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".Home_Page">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#fff"
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:text="@string/genuva_app"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_marginStart="5dp"
                android:id="@+id/sakya_CardView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toStartOf="@+id/opera_cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_name">


                <ImageView
                    android:id="@+id/sakya_Logo"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/sakia" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="200dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/SakiaElSawy"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/opera_cardView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sakya_CardView"
                app:layout_constraintTop_toTopOf="@+id/sakya_CardView">

                <ImageView
                    android:id="@+id/opera_Logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/opera_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="200dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/OperaHouse"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/tickets_Button"
                    android:layout_width="315dp"
                    android:layout_height="70dp"
                    android:background="#fff"
                    android:text="@string/MyTickets"
                    android:textColor="@color/colorAccent" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="440dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/logout_Button"
                    android:layout_width="315dp"
                    android:layout_height="70dp"
                    android:background="#fff"
                    android:text="@string/logout"
                    android:textColor="@color/Red" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="625dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/controlPanel_Button"
                    android:layout_width="315dp"
                    android:layout_height="70dp"
                    android:background="#fff"
                    android:text="@string/controlPanel"
                    android:textColor="@color/colorAccent" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
