<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.jgabrielfreitas.core.BlurImageView
        android:id="@+id/login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wall" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/genuva_app"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        android:layout_marginTop="130dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_login_edit_txt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#fff"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_login_edit_txt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#fff"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_login_edit_txt_layout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_login_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/Enter_password"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"/>


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="#3854DA"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_login_edit_txt_layout" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:layout_marginBottom="30dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_btn" />


            <TextView
                android:id="@+id/or_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="#fff"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/google_btn"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border"
                android:drawableStart="@drawable/ic_person_add_black_24dp"
                android:gravity="center"
                android:paddingStart="16dp"
                android:src="@drawable/ic_person_add_black_24dp"
                android:text="@string/Create_An_Account"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or_txt"
                app:layout_constraintBottom_toBottomOf="parent"
               android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>